Remove center alignment of profile & fix syntax

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -42,6 +42,5 @@ h1 {
 .divide {
   display: flex;
   justify-content: space-around;
-  align-items: center;
   padding: 0 20px;
 }
